...
    @State private var reload = false
    @State private var showCalendar = false
    @State private var date = Date()
    @State private var error: String? = nil
    
    // Constants
    private let mainTitle = "Wonder Astronomy"
    private let calendarImageName = "calendar.circle"
    private let infoSelectDate = "Select date to view 'Astronomy Picture of the Day' for the last 7 days from the selected date."
    private let datePlaceholder = "Date"
    private let doneButtonTitle = "Done"
    private let doneButtonFootnote = "Select the Date and Press Done!"
    private let titleSection = "Picture of the Day"
    private let detailViewStaticText = "Detail View"
    private let emptyString = ""
    private let reloadButtonTitle = "Reload"
    private let timeZone = "America/New_York"
    private let identifies = "NavigationCell"
    private let calendarButtonSize: CGFloat = 50
...
